--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,10 +15,12 @@ jobs:
 
       - uses: actions/setup-go@v3
         with:
-          go-version: 1.16
+          go-version: '>=1.16'
 
-      - uses: goreleaser/goreleaser-action@v2.6.1
+      - uses: goreleaser/goreleaser-action@v2
         with:
+          distribution: goreleaser
+          version: latest
           args: release --rm-dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
